--- a/src/app/pages/oneWayCabPage.module.css
+++ b/src/app/pages/oneWayCabPage.module.css
@@ -59,6 +59,8 @@
 }
 
 .boxContainer {
+  width: 100%;
+  height: auto;
   display: flex;
   justify-content: space-between;
   gap: 20px;
@@ -74,7 +76,7 @@
   color: black;
   border-radius: 18px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  min-width: 300px;
+  min-width: 32%;
   padding: 1rem 2.5rem;
   padding-bottom: 0rem;
 }
@@ -84,7 +86,8 @@
   background-color: #ffffff;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  min-width: 300px;
+  min-width: 33%;
+  height: auto;
   overflow: hidden;
 }
 
@@ -104,7 +107,7 @@
 
 .bottomSection {
   text-align: center;
-  color: #71766F;
+  color: #71766f;
   padding: 20px;
   border-radius: 8px;
   margin-top: 20px;
@@ -112,17 +115,20 @@
 }
 
 .bottomSection h3 {
-    font-size: 34px;
-    font-weight: 400;
-    line-height: 1.8;
+  font-size: 34px;
+  font-weight: 400;
+  line-height: 1.8;
 }
 
 .mainCont {
-    color: #216900;
-    font-weight: 600;
+  color: #216900;
+  font-weight: 600;
 }
 
 @media screen and (max-width: 992px) {
+  .pageContainer {
+    padding: 10px;
+  }
 
   .leftContent h2 {
     font-size: 10px;
@@ -153,7 +159,7 @@
     gap: 5px;
     flex-wrap: wrap;
   }
-  
+
   .boxContent {
     flex: 1;
     display: flex;
@@ -161,46 +167,47 @@
     background-color: #f2efef;
     border: 1.5px solid black;
     color: black;
-    border-radius: 18px;
+    border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    min-width: 200px;
-    padding: 1rem 2.5rem;
+    min-width: 32%;
+    padding: 0.5rem 0.5rem;
+    padding-left: 1rem;
     padding-bottom: 0rem;
   }
-  
+
   .box {
     flex: 1;
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    min-width: 300px;
+    min-width: 32%;
+    height: auto;
+    margin: auto;
     overflow: hidden;
   }
-  
+
   .box img {
     scale: 1.1;
   }
-  
+
   .boxContent ul li {
-    font-size: 12px;
+    font-size: 5px;
     line-height: 200%;
     color: #333;
   }
 
   .bottomSection {
     text-align: center;
-    color: #71766F;
+    color: #71766f;
     padding: 20px;
     border-radius: 8px;
     margin-top: 0px;
     width: 100%;
   }
 
-
   .bottomSection h3 {
     font-size: 8px;
     font-weight: 400;
     line-height: 1.8;
-}
-
+  }
 }
