--- a/src/app/pages/oneWayCabPage.module.css
+++ b/src/app/pages/oneWayCabPage.module.css
@@ -77,6 +77,7 @@
   border-radius: 18px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   min-width: 32%;
+  height: auto;
   padding: 1rem 2.5rem;
   padding-bottom: 0rem;
 }
@@ -100,7 +101,7 @@
 }
 
 .boxContent ul li {
-  font-size: 18.5px;
+  font-size: 24px;
   line-height: 200%;
   color: #333;
 }
@@ -165,7 +166,7 @@
     display: flex;
     justify-content: start;
     background-color: #f2efef;
-    border: 1.5px solid black;
+    border: 0.5px solid black;
     color: black;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -180,7 +181,7 @@
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    min-width: 32%;
+    min-width: 30%;
     height: auto;
     margin: auto;
     overflow: hidden;
